src/test/julian/Parsing/SyntaxError/prog_3.jul
import ModuleSys.SynA;

MyClass mc = new MyClass();